identidad visual y faq

--- a/index.html
+++ b/index.html
@@ -1,16 +1,66 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Mi Perfil - Refresh 2024</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="card">
-        <h1>Hola, soy Alan</h1>
-        <p>Desarrollador en proceso de actualización.</p>
-        <button id="colorBtn">Cambiar Color</button>
+<header>
+    <div id="logo-htt">How<span>to</span>train</div> <nav>
+        <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#metodo">Metodología</a></li>
+            <li><a href="#clientes">Testimonios</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+    <section id="home">
+        <h1>HOW TO TRAIN</h1>
+        <p>Lleva tu rendimiento al siguiente nivel. Entrenamiento de élite y recuperación inteligente.</p>
+        <button>Empezar ahora</button>
+    </section>
+
+    <section id="servicios">
+        <h2>Lo que hacemos</h2>
+        <div class="servicios-grid">
+            <article>Mejora del rendimiento</article>
+            <article>Recuperación de atletas</article>
+            <article>Transformación física</article>
+        </div>
+    </section>
+
+    <section id="metodo">
+        <h2>Entrena desde cualquier lugar</h2>
+        <p>Utilizamos tecnología de punta como [Nombre de la App] para monitorear tu progreso 24/7.</p>
+        </section>
+
+    <section id="clientes">
+        <h2>Casos de éxito</h2>
+        <div class="carousel">
+            </div>
+    </section>
+
+    <section id="faq">
+        <h2>Preguntas Frecuentes</h2>
+        <div class="faq-container">
+            <details>
+                <summary>¿El entrenamiento es presencial o virtual?</summary>
+                <p>Ofrecemos ambas modalidades. La virtual se gestiona íntegramente a través de nuestra App personalizada.</p>
+            </details>
+            <details>
+                <summary>¿Necesito experiencia previa?</summary>
+                <p>No. Adaptamos el plan a tu nivel actual, ya seas un atleta de élite o estés comenzando tu camino.</p>
+            </details>
+            <details>
+                <summary>¿Cómo se maneja la recuperación de lesiones?</summary>
+                <p>Contamos con enfoque de kinesiología aplicado al movimiento para asegurar una vuelta al gym segura.</p>
+            </details>
+        </div>
+    </section>
+</main>
+
+<footer>
+    <div class="social-links">
+        <a href="#">Instagram</a>
+        <a href="#">YouTube</a>
     </div>
-    <script src="script.js"></script>
-</body>
-</html>
+    <div class="video-destacado">
+        </div>
+</footer>
