arreglo del html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<header>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Mi Perfil - Refresh 2024</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
     <div id="logo-htt">How<span>to</span>train</div> <nav>
         <ul>
             <li><a href="#home">Inicio</a></li>
@@ -8,7 +15,7 @@
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
-</header>
+    </header>
 
 <main>
     <section id="home">
@@ -64,3 +71,6 @@
     <div class="video-destacado">
         </div>
 </footer>
+
+</body>
+</html>
