edit de servicios html y css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="logo-htt">How<span>to</span>train</div> <nav>
         <ul>
             <li><a href="#home">Inicio</a></li>
-            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#servicios">Entrenamiento</a></li>
             <li><a href="#metodo">Metodología</a></li>
             <li><a href="#clientes">Testimonios</a></li>
             <li><a href="#contacto">Contacto</a></li>
@@ -24,13 +24,41 @@
         <button>Empezar ahora</button>
     </section>
 
-    <section id="servicios">
-        <h2>Lo que hacemos</h2>
-        <div class="servicios-grid">
-            <article>Mejora del rendimiento</article>
-            <article>Recuperación de atletas</article>
-            <article>Transformación física</article>
+   <section id="servicios">
+    <div class="servicios-intro">
+        <div class="intro-content">
+            <h2>Entrená con un plan hecho para vos</h2>
+            <p>
+                En <strong>HTT</strong>, transformamos tu esfuerzo en resultados tangibles. 
+                Combinamos la ciencia del movimiento con un seguimiento personalizado para que 
+                cada sesión te acerque a tu mejor versión. No es solo entrenar, es saber cómo hacerlo.
+            </p>
         </div>
+        <div class="intro-image">
+            <img src="tu-foto-atleta.jpg" alt="Entrenamiento HTT">
+        </div>
+    </div>
+
+    <div class="motivacion-banner">
+        <h3>TU MÁXIMO POTENCIAL TE ESTÁ ESPERANDO</h3>
+    </div>
+
+    <div class="servicios-grid">
+        <article class="card">
+            <h4>DOMINÁ TU DISCIPLINA</h4>
+            <p>Mejorá tu rendimiento deportivo con planificación específica. Maximizamos tu fuerza y velocidad para que marques la diferencia en la competencia.</p>
+        </article>
+        
+        <article class="card">
+            <h4>RECUPERACIÓN INTELIGENTE</h4>
+            <p>Cuidamos tu cuerpo con un enfoque en kinesiología deportiva. Aprendé a escuchar a tu físico, prevenir lesiones y optimizar tus tiempos de descanso.</p>
+        </article>
+        
+        <article class="card">
+            <h4>ENTRENÁ DONDE ESTÉS</h4>
+            <p>Flexibilidad total. Elegí la modalidad presencial o llevá tu plan en el bolsillo con nuestra App. Seguimiento profesional sin importar la distancia.</p>
+        </article>
+    </div>
     </section>
 
     <section id="metodo">
