edit html y css foto - carga de foto

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     <header>
-    <div id="logo-htt">How<span>to</span>train</div> <nav>
+    <div class="logo-wrapper">
+    <a href="#home" class="logo-htt">
+        HOW<span class="accent-to">TO</span>TRAIN
+    </a>
+    </div>
+    <nav>
         <ul>
             <li><a href="#home">Inicio</a></li>
             <li><a href="#servicios">Entrenamiento</a></li>
@@ -35,7 +40,7 @@
             </p>
         </div>
         <div class="intro-image">
-            <img src="tu-foto-atleta.jpg" alt="Entrenamiento HTT">
+            <img src="assets/img/tu-foto-atleta.jpg" alt="Entrenamiento HTT">
         </div>
     </div>
 
