--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
         </div>
     </section>
 </main>
+<section id="contacto">
+    <div class="contacto-container">
+        <div class="contacto-content">
+            <h2>EMPEZÁ HOY TU CAMBIO</h2>
+            <a href="https://wa.me/+5491126639753" class="btn-whatsapp" target="_blank">
+                Enviar WhatsApp
+            </a>
+        </div>
+    </div>
+</section>
 
 <footer>
     <div class="social-links">
