fotos, html clientes y css clientes

--- a/index.html
+++ b/index.html
@@ -71,11 +71,31 @@
         <p>Utilizamos tecnología de punta como [Nombre de la App] para monitorear tu progreso 24/7.</p>
         </section>
 
-    <section id="clientes">
-        <h2>Casos de éxito</h2>
-        <div class="carousel">
-            </div>
-    </section>
+   <section id="clientes">
+    <h2>Ellos ya son parte del equipo</h2> <div class="carousel-container">
+        <div class="carousel-item">
+            <img src="assets/img/atleta-1.jpg" alt="Atleta HTT en progreso">
+        </div>
+        <div class="carousel-item">
+            <img src="assets/img/atleta-2.jpg" alt="Atleta HTT en progreso">
+        </div>
+        <div class="carousel-item">
+            <img src="assets/img/atleta-3.jpg" alt="Atleta HTT en progreso">
+        </div>
+        <div class="carousel-item">
+            <img src="assets/img/atleta-4.jpg" alt="Atleta HTT en progreso">
+        </div>
+        <div class="carousel-item">
+            <img src="assets/img/atleta-5.jpg" alt="Atleta HTT en progreso">
+        </div>
+        <div class="carousel-item">
+            <img src="assets/img/atleta-6.jpg" alt="Atleta HTT en progreso">
+        </div>
+        <div class="carousel-item">
+            <img src="assets/img/atleta-7.jpg" alt="Atleta HTT en progreso">
+        </div>
+    </div>
+</section>
 
     <section id="faq">
         <h2>Preguntas Frecuentes</h2>
