html css metodo

--- a/index.html
+++ b/index.html
@@ -67,9 +67,26 @@
     </section>
 
     <section id="metodo">
-        <h2>Entrena desde cualquier lugar</h2>
-        <p>Utilizamos tecnología de punta como [Nombre de la App] para monitorear tu progreso 24/7.</p>
-        </section>
+    <div class="metodo-container">
+        <div class="metodo-image">
+            <img src="assets/img/app-metodo.jpg" alt="App de entrenamiento HTT">
+        </div>
+
+        <div class="metodo-content">
+            <h2>Entrená desde cualquier lugar</h2>
+            <p>
+                Ya sea presencial o a distancia lo importante es registrar el progreso, 
+                para eso contamos con una <strong>aplicación personalizada</strong> donde 
+                administraremos el plan de entrenamiento que definamos en cada caso.
+            </p>
+            <p>
+                Vas a poder ver sesión a sesión toda la info de cada ejercicio con 
+                <strong>videos explicativos</strong>, asegurando que tu técnica sea 
+                siempre la correcta, estés donde estés.
+            </p>
+        </div>
+    </div>
+</section>
 
    <section id="clientes">
     <h2>Ellos ya son parte del equipo</h2> <div class="carousel-container">
