edit header html y css

--- a/index.html
+++ b/index.html
@@ -7,27 +7,33 @@
 <body>
     <header>
     <div class="logo-wrapper">
-    <a href="#home" class="logo-htt">
-        HOW<span class="accent-to">TO</span>TRAIN
-    </a>
+        <a href="#home" class="logo-htt">
+            HOW<span class="accent-to">TO</span>TRAIN
+        </a>
     </div>
     <nav>
         <ul>
             <li><a href="#home">Inicio</a></li>
             <li><a href="#servicios">Entrenamiento</a></li>
             <li><a href="#metodo">Metodología</a></li>
-            <li><a href="#clientes">Testimonios</a></li>
+            <li><a href="#clientes">Atletas</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
-    </header>
+</header>
 
-<main>
-    <section id="home">
-        <h1>HOW TO TRAIN</h1>
-        <p>Lleva tu rendimiento al siguiente nivel. Entrenamiento de élite y recuperación inteligente.</p>
-        <button>Empezar ahora</button>
-    </section>
+<section id="home">
+    <div class="home-overlay">
+        <div class="home-content">
+            <h1>DESAFÍA TU CUERPO, <br><span>SUPERA TUS LÍMITES</span></h1>
+            <p>Entrenamiento de élite y recuperación inteligente para alcanzar tu máximo rendimiento.</p>
+            <div class="home-buttons">
+                <a href="#servicios" class="btn-primary">Empezar ahora</a>
+                <a href="#metodo" class="btn-secondary">Saber más</a>
+            </div>
+        </div>
+    </div>
+</section>
 
    <section id="servicios">
     <div class="servicios-intro">
