--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 <body>
     <header>
     <div class="logo-wrapper">
-        <a href="#home" class="logo-htt">
-            HOW<span class="accent-to">TO</span>TRAIN
-        </a>
+        <a href="#home" class="logo-htt">HOW<span class="accent-to">TO</span>TRAIN</a>
     </div>
     <nav>
-        <ul>
+        <div class="burger" id="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+        
+        <ul class="nav-links" id="nav-links">
             <li><a href="#home">Inicio</a></li>
             <li><a href="#servicios">Entrenamiento</a></li>
             <li><a href="#metodo">Metodología</a></li>
@@ -20,7 +24,7 @@
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
-</header>
+    </header>
 
 <section id="home">
     <div class="home-overlay">
