edit para wrap burger header css html script para que cierre

--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
         <a href="#home" class="logo-htt">HOW<span class="accent-to">TO</span>TRAIN</a>
     </div>
     <nav>
-        <div class="burger" id="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
+    <div class="burger" id="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
+    
+    <ul class="nav-links" id="nav-links">
+        <li class="close-menu" id="close-menu">&times;</li> 
         
-        <ul class="nav-links" id="nav-links">
-            <li><a href="#home">Inicio</a></li>
-            <li><a href="#servicios">Entrenamiento</a></li>
-            <li><a href="#metodo">Metodología</a></li>
-            <li><a href="#clientes">Atletas</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
+        <li><a href="#home">Inicio</a></li>
+        <li><a href="#servicios">Entrenamiento</a></li>
+        <li><a href="#metodo">Metodología</a></li>
+        <li><a href="#clientes">Atletas</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+    </ul>
     </nav>
     </header>
 
