edit color boton wssp y principio de footer html

--- a/index.html
+++ b/index.html
@@ -156,12 +156,20 @@
 </section>
 
 <footer>
-    <div class="social-links">
-        <a href="#">Instagram</a>
-        <a href="#">YouTube</a>
-    </div>
-    <div class="video-destacado">
+    <div class="footer-container">
+        <div class="footer-logo">
+            <a href="#home" class="logo-htt">HOW<span class="accent-to">TO</span>TRAIN</a>
+            <p>© 2026 How To Train. Todos los derechos reservados.</p>
         </div>
+        
+        <div class="footer-socials">
+            <h4>Seguinos</h4>
+            <div class="social-icons">
+                <a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a>
+                <a href="https://youtube.com/tu_canal" target="_blank">YouTube</a>
+            </div>
+        </div>
+    </div>
 </footer>
 
 <script src="script.js"></script>
