--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div class="contacto-container">
         <div class="contacto-content">
             <h2>EMPEZÁ HOY TU CAMBIO</h2>
-            <a href="https://wa.me/+5491126639753" class="btn-whatsapp" target="_blank">
+            <a href="https://w.app/howtotrain" class="btn-whatsapp" target="_blank">
                 Enviar WhatsApp
             </a>
         </div>
