editfooter html y css

--- a/index.html
+++ b/index.html
@@ -158,19 +158,15 @@
 </section>
 
 <footer>
-    <div class="footer-container">
+    <div class="footer-content">
         <div class="footer-logo">
-            <a href="#home" class="logo-htt">HOW<span class="accent-to">TO</span>TRAIN</a>
-            <p>© 2026 How To Train. Todos los derechos reservados.</p>
+            HOW<span class="accent-to">TO</span>TRAIN
         </div>
-        
         <div class="footer-socials">
-            <h4>Seguinos</h4>
-            <div class="social-icons">
-                <a href="https://instagram.com/tu_usuario" target="_blank">Instagram</a>
-                <a href="https://youtube.com/tu_canal" target="_blank">YouTube</a>
-            </div>
+            <a href="#" target="_blank">Instagram</a>
+            <a href="#" target="_blank">YouTube</a>
         </div>
+        <p class="copyright">© 2026 HTT - Todos los derechos reservados</p>
     </div>
 </footer>
 
