editfooter html y css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>Mi Perfil - Refresh 2024</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -158,14 +159,24 @@
 </section>
 
 <footer>
-    <div class="footer-content">
+    <div class="footer-container">
         <div class="footer-logo">
             HOW<span class="accent-to">TO</span>TRAIN
         </div>
-        <div class="footer-socials">
-            <a href="#" target="_blank">Instagram</a>
-            <a href="#" target="_blank">YouTube</a>
+        
+        <div class="social-icons">
+            <a href="https://instagram.com/tu_usuario" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://youtube.com/tu_canal" target="_blank" aria-label="YouTube">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="https://wa.me/5491122334455?text=Hola%20%F0%9F%91%8B%2C%20me%20gustar%C3%ADa%20recibir%20informaci%C3%B3n%20sobre%20el%20entrenamiento%20personalizado%20de%20HOWTOTRAIN%20%F0%9F%8F%8B%EF%B8%8F%0AMe%20llamo%20..." 
+               target="_blank" aria-label="WhatsApp">
+                <i class="fab fa-whatsapp"></i>
+            </a>
         </div>
+        
         <p class="copyright">© 2026 HTT - Todos los derechos reservados</p>
     </div>
 </footer>
