edit texto contacto

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <section id="contacto">
     <div class="contacto-container">
         <div class="contacto-content">
-            <h2>EMPEZÁ HOY TU CAMBIO</h2>
+            <h2>QUIERO MI PLAN PERSONALIZADO</h2>
             <a href="https://wa.link/cs1faj" 
                class="btn-whatsapp" 
                target="_blank">
