edit icono footer tiktok

--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
                target="_blank" aria-label="WhatsApp">
                 <i class="fab fa-whatsapp"></i>
             </a>
+            <a href="https://www.tiktok.com/@tu_usuario" target="_blank" aria-label="TikTok">
+            <i class="fab fa-tiktok"></i>
+            </a>
         </div>
         
         <p class="copyright">© 2026 HTT - Todos los derechos reservados</p>
