edit font html y css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HowToTrain | Entrenamiento Personalizado</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -23,7 +24,7 @@
         <li><a href="#home">Inicio</a></li>
         <li><a href="#servicios">Entrenamiento</a></li>
         <li><a href="#metodo">Metodología</a></li>
-        <li><a href="#clientes">Atletas</a></li>
+        <li><a href="#FAQ">FAQ</a></li>
         <li><a href="#contacto">Contacto</a></li>
     </ul>
     </nav>
