edit html faq href

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="#home">Inicio</a></li>
         <li><a href="#servicios">Entrenamiento</a></li>
         <li><a href="#metodo">Metodología</a></li>
-        <li><a href="#FAQ">FAQ</a></li>
+        <li><a href="#faq">FAQ</a></li>
         <li><a href="#contacto">Contacto</a></li>
     </ul>
     </nav>
