--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </section>
 
     <section id="faq">
-        <h2>Preguntas Frecuentes</h2>
+        <h2>FAQ</h2>
         <div class="faq-container">
             <details>
                 <summary>¿El entrenamiento es presencial o virtual?</summary>
