edit html y css texto home

--- a/index.html
+++ b/index.html
@@ -33,13 +33,19 @@
 <section id="home">
     <div class="home-overlay">
         <div class="home-content">
-            <h1>DESAFÍA TU CUERPO, <br><span>SUPERA TUS LÍMITES</span></h1>
-            <p>Entrenamiento de élite y recuperación inteligente para alcanzar tu máximo rendimiento.</p>
-            <div class="home-buttons">
-                <a href="#servicios" class="btn-primary">Empezar ahora</a>
-                <a href="#metodo" class="btn-secondary">Saber más</a>
-            </div>
-        </div>
+    <h1>
+        ENTRENAMIENTO DE <span style="color: var(--accent-cyan);">FUERZA</span><br>
+        & READAPTACIÓN <span style="color: var(--accent-cyan);">FUNCIONAL</span>
+    </h1>
+    <p>
+        Mejora tu rendimiento y prevení lesiones con un sistema basado en evidencia y biomecánica.
+    </p>
+    
+    <div class="home-buttons">
+        <a href="#contacto" class="btn-primary">DESCUBRIR EL SISTEMA</a>
+        <a href="#metodo" class="btn-secondary">VER PROPUESTAS</a>
+    </div>
+</div>
     </div>
 </section>
 
