--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="home-content">
     <h1>
         ENTRENAMIENTO DE <span style="color: var(--accent-cyan);">FUERZA</span><br>
-        & READAPTACIÓN <span style="color: var(--accent-cyan);">FUNCIONAL</span>
+        Y READAPTACIÓN <span style="color: var(--accent-cyan);">FUNCIONAL</span>
     </h1>
     <p>
         Mejora tu rendimiento y prevení lesiones con un sistema basado en evidencia y biomecánica.
