edit subir logo y colocarlo en head

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-    <div class="logo-wrapper">
-        <a href="#home" class="logo-htt">HOW<span class="accent-to">TO</span>TRAIN</a>
-    </div>
+    <a href="#home" class="logo-link">
+    <img src="assets/img/logo-htt.png" alt="Logo How To Train" class="logo-img">
+    </a>
     <nav>
     <div class="burger" id="burger">
         <div class="line1"></div>
