edit titulo home

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="home-overlay">
         <div class="home-content">
     <h1>
-        ENTRENAMIENTO DE <span style="color: var(--accent-cyan);">FUERZA</span><br>
+        <span style="color: var(--accent-cyan);">ENTRENAMIENTO</span> DE FUERZA<br>
         Y READAPTACIÓN <span style="color: var(--accent-cyan);">FUNCIONAL</span>
     </h1>
     <p>
