edit titulo home

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         Y READAPTACIÓN <span style="color: var(--accent-cyan);">FUNCIONAL</span>
     </h1>
     <p>
-        Mejora tu rendimiento y prevení lesiones con un sistema basado en evidencia y biomecánica.
+        Mejora tu rendimiento y prevení lesiones con un sistema basado en evidencia.
     </p>
     
     <div class="home-buttons">
-        <a href="#contacto" class="btn-primary">DESCUBRIR EL SISTEMA</a>
+        <a href="#contacto" class="btn-primary">CONOCER EL SISTEMA</a>
         <a href="#metodo" class="btn-secondary">VER PROPUESTAS</a>
     </div>
 </div>
