edit html redes links

--- a/index.html
+++ b/index.html
@@ -172,17 +172,17 @@
         </div>
         
         <div class="social-icons">
-            <a href="https://instagram.com/tu_usuario" target="_blank" aria-label="Instagram">
+            <a href="https://www.instagram.com/howtotrain.fit" target="_blank" aria-label="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://youtube.com/tu_canal" target="_blank" aria-label="YouTube">
+            <a href="https://www.youtube.com/@howtotrain_fit" target="_blank" aria-label="YouTube">
                 <i class="fab fa-youtube"></i>
             </a>
             <a href="https://wa.me/5491122334455?text=Hola%20%F0%9F%91%8B%2C%20me%20gustar%C3%ADa%20recibir%20informaci%C3%B3n%20sobre%20el%20entrenamiento%20personalizado%20de%20HOWTOTRAIN%20%F0%9F%8F%8B%EF%B8%8F%0AMe%20llamo%20..." 
                target="_blank" aria-label="WhatsApp">
                 <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="https://www.tiktok.com/@tu_usuario" target="_blank" aria-label="TikTok">
+            <a href="https://www.tiktok.com/@howtotrain.fit?lang=en" target="_blank" aria-label="TikTok">
             <i class="fab fa-tiktok"></i>
             </a>
         </div>
