edit css hero text tamaño

--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
         <div class="home-overlay">
             <div class="home-content">
                 <h1>
-                    <span style="color: var(--accent-cyan);">ENTRENAMIENTO</span> DE FUERZA<br>
-                    Y READAPTACIÓN <span style="color: var(--accent-cyan);">FUNCIONAL</span>
+                    Entrenamiento funcional para un cuerpo<br>
+                    <span style="color: var(--accent-cyan);">más hábil y sin dolores</span>
                 </h1>
-                <p>
-                    Mejora tu rendimiento y prevení lesiones con un sistema basado en evidencia.
+
+                <p class="hero-subtitle">
+                    Desarrollamos y mejoramos tus habilidades motoras (fuerza, coordinación, estabilidad y flexibilidad)
+                    con un sistema de entrenamiento integrado y progresivo.
                 </p>
 
                 <div class="home-buttons">
-                    <a href="#contacto" class="btn-primary">CONOCER EL SISTEMA</a>
-                    <a href="#metodo" class="btn-secondary">VER PROPUESTAS</a>
+                    <a href="#contacto" class="btn-primary">Quiero empezar mi evaluación</a>
                 </div>
             </div>
         </div>
