edit html con nuevas secciones

--- a/index.html
+++ b/index.html
@@ -52,6 +52,192 @@
         </div>
     </section>
 
+    <section id="base-entrenamiento" style="padding: 80px 20px; background-color: var(--bg-color);">
+        <div class="container" style="max-width: 1000px; margin: 0 auto;">
+            <h2 class="section-title">¿En qué se basa nuestro entrenamiento?</h2>
+            <p style="text-align: center; max-width: 800px; margin: 0 auto 40px auto; color: #ccc;">
+                Nuestro abordaje se centra en mejorar tus habilidades motoras mediante ejercicios funcionales con peso
+                corporal, máquinas y diversos elementos, ajustando la progresión a tu nivel real.
+            </p>
+
+            <div class="grid-2-cols"
+                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; align-items: center;">
+                <div>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
+                            <span style="color: var(--accent-cyan); margin-right: 10px;">✔</span>
+                            Fuerza, potencia, coordinación, estabilidad y flexibilidad como ejes principales.
+                        </li>
+                        <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
+                            <span style="color: var(--accent-cyan); margin-right: 10px;">✔</span>
+                            Trabajo con peso corporal, máquinas y elementos (bandas, pelotas, kettlebells).
+                        </li>
+                    </ul>
+                </div>
+                <div
+                    style="background-color: #222; height: 250px; border-radius: 12px; display: flex; align-items: center; justify-content: center; border: 1px solid #333;">
+                    <p style="color: #666;">(FOTO EJERCICIO ESPECÍFICO)</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="sistema-integrado" style="padding: 80px 20px; background-color: var(--bg-card);">
+        <div class="container" style="max-width: 1000px; margin: 0 auto; text-align: center;">
+            <h2 class="section-title">Un sistema que combina lo mejor de varios métodos</h2>
+            <p style="max-width: 800px; margin: 0 auto 30px auto; color: #ccc;">
+                Tomamos como referencia pilates, crossfit, yoga, entrenamiento de fuerza, HIIT, SMFT, levantamiento
+                olímpico y FNP para crear un método integrador y seguro.
+            </p>
+
+            <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px;">
+                <div
+                    style="background: #111; padding: 20px; border-radius: 8px; border-left: 3px solid var(--accent-cyan); width: 100%; max-width: 400px; text-align: left;">
+                    <h4 style="color: #fff; margin-bottom: 10px;">Selección efectiva</h4>
+                    <p style="font-size: 0.9rem; color: #aaa;">Seleccionamos lo más efectivo de cada método según tu
+                        objetivo específico.</p>
+                </div>
+                <div
+                    style="background: #111; padding: 20px; border-radius: 8px; border-left: 3px solid var(--accent-cyan); width: 100%; max-width: 400px; text-align: left;">
+                    <h4 style="color: #fff; margin-bottom: 10px;">Sin extremos</h4>
+                    <p style="font-size: 0.9rem; color: #aaa;">Evitamos los extremos: priorizamos técnica, control y
+                        progresión inteligente.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="resultados" style="padding: 80px 20px; background-color: var(--bg-color);">
+        <div class="container" style="max-width: 1000px; margin: 0 auto;">
+            <h2 class="section-title">Resultados que podés esperar</h2>
+            <p style="text-align: center; margin-bottom: 40px;">Nuestro sistema apunta a que te muevas mejor, con menos
+                dolor y más control.</p>
+
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 15px; padding: 15px; background: #1a1a1a; border-radius: 8px;">
+                        <strong style="color: var(--accent-cyan);">Corregir</strong> diferentes síndromes posturales y
+                        reducir dolores asociados.
+                    </li>
+                    <li style="margin-bottom: 15px; padding: 15px; background: #1a1a1a; border-radius: 8px;">
+                        <strong style="color: var(--accent-cyan);">Mejorar</strong> tus “weak links” para que dejen de
+                        limitarte al entrenar.
+                    </li>
+                    <li style="margin-bottom: 15px; padding: 15px; background: #1a1a1a; border-radius: 8px;">
+                        <strong style="color: var(--accent-cyan);">Aprender</strong> a ejecutar patrones de movimiento
+                        eficientes (empujar, traccionar, lanzar, etc.).
+                    </li>
+                </ul>
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 15px; padding: 15px; background: #1a1a1a; border-radius: 8px;">
+                        <strong style="color: var(--accent-cyan);">Desarrollar</strong> conciencia corporal y trabajar
+                        según cadenas musculares.
+                    </li>
+                    <li style="margin-bottom: 15px; padding: 15px; background: #1a1a1a; border-radius: 8px;">
+                        <strong style="color: var(--accent-cyan);">Reactivar</strong> el sistema de estabilización
+                        profunda para un cuerpo más hábil.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section id="paso-a-paso" style="padding: 80px 20px; background-color: var(--bg-card); text-align: center;">
+        <h2 class="section-title">Así funciona nuestro proceso</h2>
+        <p style="margin-bottom: 50px;">Evaluamos, planificamos y ajustamos de forma continua.</p>
+
+        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px;">
+            <div style="width: 250px; padding: 20px; border: 1px solid #333; border-radius: 12px;">
+                <div style="font-size: 2rem; color: var(--accent-cyan); margin-bottom: 15px;">1</div>
+                <h3 style="margin-bottom: 10px;">Evaluación</h3>
+                <p style="font-size: 0.9rem; color: #aaa;">Analizamos postura, movilidad y fuerza para entender tu
+                    cuerpo hoy.</p>
+            </div>
+            <div style="width: 250px; padding: 20px; border: 1px solid #333; border-radius: 12px;">
+                <div style="font-size: 2rem; color: var(--accent-cyan); margin-bottom: 15px;">2</div>
+                <h3 style="margin-bottom: 10px;">Plan Adaptado</h3>
+                <p style="font-size: 0.9rem; color: #aaa;">Diseñamos un plan específico según nivel, objetivos y
+                    lesiones.</p>
+            </div>
+            <div style="width: 250px; padding: 20px; border: 1px solid #333; border-radius: 12px;">
+                <div style="font-size: 2rem; color: var(--accent-cyan); margin-bottom: 15px;">3</div>
+                <h3 style="margin-bottom: 10px;">Progresión</h3>
+                <p style="font-size: 0.9rem; color: #aaa;">Ajustamos intensidad y volumen mes a mes sin saltos bruscos.
+                </p>
+            </div>
+            <div style="width: 250px; padding: 20px; border: 1px solid #333; border-radius: 12px;">
+                <div style="font-size: 2rem; color: var(--accent-cyan); margin-bottom: 15px;">4</div>
+                <h3 style="margin-bottom: 10px;">Seguimiento</h3>
+                <p style="font-size: 0.9rem; color: #aaa;">Revisamos avances y corregimos técnica constantemente.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="para-quien" style="padding: 80px 20px; background-color: var(--bg-color);">
+        <div class="container" style="max-width: 900px; margin: 0 auto; text-align: center;">
+            <h2 class="section-title">¿Es este entrenamiento para vos?</h2>
+            <p style="font-style: italic; color: var(--accent-cyan); margin-bottom: 30px;">"Ideal si has intentado de
+                todo y no has tenido resultados"</p>
+
+            <div
+                style="text-align: left; background: #151515; padding: 40px; border-radius: 15px; border: 1px solid #333;">
+                <ul style="list-style: none; padding: 0;">
+                    <li style="margin-bottom: 20px; font-size: 1.1rem;">👉 Personas con <strong>dolores
+                            recurrentes</strong> que quieren volver a entrenar con seguridad.</li>
+                    <li style="margin-bottom: 20px; font-size: 1.1rem;">👉 Quienes sienten que su cuerpo "no responde"
+                        (falta de fuerza/agilidad).</li>
+                    <li style="margin-bottom: 20px; font-size: 1.1rem;">👉 Deportistas recreativos que quieren mejorar
+                        rendimiento y postura.</li>
+                    <li style="margin-bottom: 20px; font-size: 1.1rem;">👉 Personas que desean mejorar su composición
+                        corporal (bajar grasa / subir músculo).</li>
+                </ul>
+                <p style="text-align: center; margin-top: 30px; font-size: 0.9rem; opacity: 0.7;">Cada plan es
+                    individualizado y adaptado a necesidades específicas.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="sobre-nosotros" style="padding: 80px 20px; background-color: var(--bg-card); text-align: center;">
+        <h2 class="section-title">Quiénes estamos detrás de How To Train</h2>
+        <p style="max-width: 700px; margin: 0 auto 40px auto;">Entrenadores especializados en movimiento, salud y
+            rendimiento.</p>
+
+        <div style="display: flex; justify-content: center; gap: 40px; flex-wrap: wrap;">
+            <div style="width: 300px;">
+                <div
+                    style="width: 150px; height: 150px; background: #333; border-radius: 50%; margin: 0 auto 20px auto; overflow: hidden;">
+                    <img src="tu-foto-coach.jpg" alt="Coach"
+                        style="width: 100%; height: 100%; object-fit: cover; opacity: 0.5;">
+                </div>
+                <h3>Nombre Coach</h3>
+                <p style="font-size: 0.9rem; color: #aaa;">Especialista en Biomecánica y Rehabilitación.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="testimonios-new" style="padding: 80px 20px; background-color: var(--bg-color);">
+        <h2 class="section-title">Historias de cuerpos más funcionales</h2>
+        <div
+            style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; max-width: 1100px; margin: 40px auto;">
+            <div style="background: #111; padding: 30px; border-radius: 10px; border: 1px solid #333;">
+                <p style="font-style: italic; margin-bottom: 15px;">"Llegué con dolor de espalda crónico. En 3 meses
+                    volví a correr sin molestias."</p>
+                <h4 style="color: var(--accent-cyan);">— Martín G.</h4>
+            </div>
+            <div style="background: #111; padding: 30px; border-radius: 10px; border: 1px solid #333;">
+                <p style="font-style: italic; margin-bottom: 15px;">"Nunca entendí cómo moverme hasta que empecé acá. La
+                    atención al detalle es increíble."</p>
+                <h4 style="color: var(--accent-cyan);">— Laura S.</h4>
+            </div>
+            <div style="background: #111; padding: 30px; border-radius: 10px; border: 1px solid #333;">
+                <p style="font-style: italic; margin-bottom: 15px;">"El mejor lugar para entrenar fuerte pero seguro. Se
+                    adaptan a mi ritmo."</p>
+                <h4 style="color: var(--accent-cyan);">— Pablo R.</h4>
+            </div>
+        </div>
+    </section>
+
+
     <section id="servicios">
         <div class="servicios-intro">
             <div class="intro-content">
