edit html con nuevas secciones

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div
                     style="background-color: #222; height: 250px; border-radius: 12px; display: flex; align-items: center; justify-content: center; border: 1px solid #333;">
-                    <p style="color: #666;"><img src="assets/img/tu-foto-atleta.jpg" alt="Entrenamiento HTT"></p>
+                    <p style="color: #666;">(FOTO EJERCICIO ESPECÍFICO)</p>
                 </div>
             </div>
         </div>
