edit html con nuevas secciones

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <li class="close-menu" id="close-menu">&times;</li>
 
                 <li><a href="#home">Inicio</a></li>
-                <li><a href="#servicios">Entrenamiento</a></li>
-                <li><a href="#metodo">Metodología</a></li>
+                <li><a href="#base-entrenamiento">Entrenamiento</a></li>
+                <li><a href="#paso-a-paso">Metodología</a></li>
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
