--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="home-overlay">
             <div class="home-content">
                 <h1>
-                    Entrenamiento funcional para un cuerpo<br>
-                    <span style="color: var(--accent-cyan);">más hábil y sin dolores</span>
+                     <span style="color: var(--accent-cyan);">ENTRENAMIENTO</span> DE FUERZA<br>
+                    Y READAPTACIÓN <span style="color: var(--accent-cyan);">FUNCIONAL</span>
                 </h1>
 
                 <p class="hero-subtitle">
@@ -60,25 +60,28 @@
                 corporal, máquinas y diversos elementos, ajustando la progresión a tu nivel real.
             </p>
 
-            <div class="grid-2-cols"
-                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; align-items: center;">
-                <div>
-                    <ul style="list-style: none; padding: 0;">
-                        <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
-                            <span style="color: var(--accent-cyan); margin-right: 10px;">✔</span>
-                            Fuerza, potencia, coordinación, estabilidad y flexibilidad como ejes principales.
-                        </li>
-                        <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
-                            <span style="color: var(--accent-cyan); margin-right: 10px;">✔</span>
-                            Trabajo con peso corporal, máquinas y elementos (bandas, pelotas, kettlebells).
-                        </li>
-                    </ul>
-                </div>
-                <div
-                    style="background-color: #222; height: 250px; border-radius: 12px; display: flex; align-items: center; justify-content: center; border: 1px solid #333;">
-                    <p style="color: #666;">(FOTO EJERCICIO ESPECÍFICO)</p>
-                </div>
-            </div>
+            <div class="grid-2-cols" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; align-items: center;">
+    
+    <div>
+        <ul style="list-style: none; padding: 0;">
+            <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
+                <span style="color: var(--accent-cyan); margin-right: 10px; font-size: 1.2rem;">✔</span>
+                <p style="margin: 0;">Fuerza, potencia, coordinación, estabilidad y flexibilidad como ejes principales.</p>
+            </li>
+            <li style="margin-bottom: 20px; display: flex; align-items: flex-start;">
+                <span style="color: var(--accent-cyan); margin-right: 10px; font-size: 1.2rem;">✔</span>
+                <p style="margin: 0;">Trabajo con peso corporal, máquinas y elementos (bandas, pelotas, kettlebells).</p>
+            </li>
+        </ul>
+    </div>
+
+    <div style="height: 300px; width: 100%; position: relative;">
+        <img src="assets/img/ejercicio-entrenamiento.jpg" 
+             alt="Entrenamiento Funcional con elementos" 
+             style="width: 100%; height: 100%; object-fit: cover; border-radius: 12px; border: 1px solid #333; box-shadow: 0 10px 30px rgba(0,0,0,0.5);">
+    </div>
+
+</div>
         </div>
     </section>
 
